@@ -5,14 +5,16 @@ AUX newrelic_rpm-2.10.8-no-webrick.patch 682 RMD160 3a7f7cc82c58b1786f64d89bebca
 AUX newrelic_rpm-2.12.3-less-stdout.patch 1314 RMD160 f3296bc55471a3989a996b12f5842c825ebbae78 SHA1 28ec60b282f7bb0aa446b7e26f92d22e0db79e43 SHA256 b1428b46d4cdac68d228cad8948862fc8d6f3ac0fa5a9f09e22ee33b14dcf130
 DIST newrelic_rpm-2.12.3.gem 324608 RMD160 54616a03cfe2e38a83cc8e3b3ac30845d9e3ba4c SHA1 692959b0d6876cb7a0e1431e47025a7f9a862078 SHA256 c39e56ef57fa86153504ad79d838772753756eb72116081700fdab17cd6b33cf
 DIST newrelic_rpm-3.0.0.gem 367104 RMD160 8ec304a45b65fec7c9d2c02ee3b6e806c7007c03 SHA1 d0df17e32b313aea6c5f5669ef7c634e5e30b81d SHA256 fb2592913807dd233334611496ed102322249234462fb161bc9a2127a4f48860
+DIST newrelic_rpm-3.1.0.gem 377856 RMD160 0ef6152d18686951b67912c22cdf8aa7d97cc955 SHA1 e65871432318eace9dee8d91c93c770dcb24fe75 SHA256 0eeb08244dc3ea7d4b59ca8d5f545665599062fa122920ec7ee26ccdc59ddd6a
 EBUILD newrelic_rpm-2.12.3-r1.ebuild 784 RMD160 b99cd5dc094a5a08e9c9c80740d57060a5038e96 SHA1 3c5371eac50ccca62c364528897b43356738837c SHA256 87a771fe16f5273afe38e3699a0137855449e899331eb8179ad2be15e71a740b
 EBUILD newrelic_rpm-3.0.0.ebuild 768 RMD160 8a75acdaf352f77f77b69f6f0512649a7603a616 SHA1 934494efe4bee96f8ec8b4fdab0a331b07262d24 SHA256 30062e9a26aed1fd44e75aefe112d7aad048baab9a175566d5cc177c7e06edfd
-MISC ChangeLog 2357 RMD160 259aa8692b5c7750ef06f4e824d389e12dda76bc SHA1 fb64028bf9b06faf68e0791f9915c2f9cdc70158 SHA256 959dffaf39dd299eb83d82e357984d96f4b4c66f8b01638ac8404529d6c2b53f
+EBUILD newrelic_rpm-3.1.0.ebuild 768 RMD160 8a75acdaf352f77f77b69f6f0512649a7603a616 SHA1 934494efe4bee96f8ec8b4fdab0a331b07262d24 SHA256 30062e9a26aed1fd44e75aefe112d7aad048baab9a175566d5cc177c7e06edfd
+MISC ChangeLog 2487 RMD160 0ad7323d11c1415e871991a12235a689551e6f07 SHA1 008e8076fb91040afbe6b0c865db49c86351fc8d SHA256 a3635ff3ff1804b9aeb847646be582ff78f8ebfa29051eec895fbed4db73965d
 MISC metadata.xml 201 RMD160 bbf7920d9809941fb024d20016dbe2fb9f15ff97 SHA1 e629d21795e99a77bd0a6aded1a153fd12d5b2c5 SHA256 c90b12c6600840878686d4544dbc51d97b0715add76b40d9400415cdef6324ad
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iF4EAREIAAYFAk3T24gACgkQrnu0mw69JkqqSgD+LS/IqPQ2qphtsknCRg8ZpMKK
-MngbqBN72qpxRmcniRkA/3FktoRFC8veks7zz8wUij9B8Q6o1GXTMWwtiurCKhbe
-=9Mze
+iF4EAREIAAYFAk4EoI8ACgkQrnu0mw69JkqH6gD7BHGITmon5Tct2fqTXf1tHzo2
+W9/e498ezFyCkiwW4MMA/RiI/J2mpdwZmvjdP+YfL9fJA+n1tj6y8pm4+ki2eV7q
+=AF6W
 -----END PGP SIGNATURE-----
