@@ -2,6 +2,11 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*newrelic_rpm-3.1.0 (24 Jun 2011)
+
+  24 Jun 2011; Hans de Graaff <graaff@gentoo.org> +newrelic_rpm-3.1.0.ebuild:
+  Version bump.
+
   18 May 2011; Hans de Graaff <graaff@gentoo.org> newrelic_rpm-3.0.0.ebuild:
   Add vendor since it contains currently unreleased gems.
 
